--- a/scr/tmuxp-scraping-upwork.yaml
+++ b/scr/tmuxp-scraping-upwork.yaml
@@ -4,6 +4,7 @@ before_script: pipenv install --dev --skip-lock
 shell_command_before:
 - '[ -d `pipenv --venv` ] && source `pipenv --venv`/bin/activate && reset'
 - 'cd $(git rev-parse --show-toplevel)'
+windows:
 - window_name: upwork
   layout: tiled
   panes:
