--- a/scr/tmuxp-scraping-session.yaml
+++ b/scr/tmuxp-scraping-session.yaml
@@ -12,34 +12,43 @@ windows:
     - python ./py/prices_acefoods.py run
     - python ./py/prices_adayroi.py run
     - python ./py/prices_bachhoaxanh.py run
+- window_name: price
+  layout: tiled
+  panes:
     - python ./py/prices_cellphones.py run
     - python ./py/prices_dichonhanh.py run
     - python ./py/prices_dienmayxanh.py run
     - python ./py/prices_foodhero.py run
-    - python ./py/prices_fptshop.py run
 - window_name: price
   layout: tiled
   panes:
+    - python ./py/prices_fptshop.py run
     - python ./py/prices_gcaeco.py run
     - python ./py/prices_hoanghamobile.py run
     - python ./py/prices_hotdealvn.py run
+- window_name: price
+  layout: tiled
+  panes:
     - python ./py/prices_nkfood.py run
     - python ./py/prices_nongsanbanbuon.py run
     - python ./py/prices_sendo.py run
     - python ./py/prices_taphoagannha.py run
-    - python ./py/prices_thegioididong.py run
 - window_name: price
   layout: tiled
   panes:
+    - python ./py/prices_thegioididong.py run
     - python ./py/prices_tiki.py run
     - python ./py/prices_vinmart.py run
     - python ./py/prices_vnshop.py run
-- window_name: lazada
+- window_name: price
   layout: tiled
   panes:
     - python ./py/prices_lazadavn.py run
     - python ./py/prices_lazadaid.py run
     - python ./py/prices_lazadamy.py run
     - python ./py/prices_lazadaph.py run
+- window_name: price
+  layout: tiled
+  panes:
     - python ./py/prices_lazadasg.py run
     - python ./py/prices_lazadath.py run
